written about sum

--- a/03_implementation.tex
+++ b/03_implementation.tex
@@ -195,8 +195,23 @@ This is the first calculation we have seen that will contribute to make \texttt{
 For the same reason as explained for the element-wise multiplication between a vector and a \texttt{NullJac} matrix, this implementation will not have any big advantages compared to the \texttt{SparseMatrixCSC} implementation used in \texttt{FAD} as it also will quickly figure out the needlessness of the calculation.
 
 \subsection{Efficient Code VS Readable and Elegant Code}
-There is usually a fine balance between writing efficient code and readable/elegant code. Sometimes you have the opportunity to do both, but often you have to choose which of them you want to give most focus. In the end of \autoref{sec:ImplementationAD} I explained how we can elegantly implement the \texttt{sum} function, and all other built-in functions that iterate through the AD-variables, only by implementing the \texttt{iterate} function. This is a very elegant use of Julia's multiple dispatch system as we get a lot of functionality "for free". The downside however is that we loose computational efficiency that we could achieve by implementing the \texttt{sum} function ourselves. Consider the previous approach where we only have implemented the \texttt{iterate} function and we use the \texttt{Base.sum} function (The standard \texttt{sum} function in Julia) to sum up the values in the AD-variable. For each iteration in the addition we access row $i$ in the AD-variable and add it to the total sum. This consist of extracting row $i$ from each Jacobian and creating a new AD-variable only consisting of row $i$. And this we do for all the rows! It is clear that we can make this summation more efficient by implementing it ourselves:
+There is usually a fine balance between writing efficient code and readable/elegant code. Sometimes you have the opportunity to do both, but often you have to choose which of them you want to give most focus. In the end of \autoref{sec:ImplementationAD} I explained how we can elegantly implement the \texttt{sum} function, and all other built-in functions that iterate through the AD-variables, only by implementing the \texttt{iterate} function. This is a very elegant use of Julia's multiple dispatch system as we get a lot of functionality "for free". The downside however is that we loose computational efficiency that we could achieve by implementing the \texttt{sum} function ourselves. Consider the previous approach where we only have implemented the \texttt{iterate} function and we use the \texttt{Base.sum} function (The standard \texttt{sum} function in Julia) to sum up the values in the AD-variable. For each iteration in the addition we access row $i$ in the AD-variable and add it to the total sum. This consist of extracting row $i$ from each Jacobian and creating a new AD-variable only consisting of row $i$. And this we do for all the rows! It is clear that we can make this summation more efficient by instead of taking each row by row and add it to the final sum, we can sum up the columns in one go:
+\lstinputlisting{code/sum.jl}
+Instead of retrieving each row, one by one, like we did using \texttt{Base.sum}, we now add up each column in one go. \texttt{colSum} is a function implemented in each extended type of \texttt{CustomJac} that sums up all the columns in the Jacobians and returns a $1\times n$ matrix. Here $n$ is a varying number depending on the space for the relevant primary variable. For \texttt{NullJac} the function simply returns a $1\times n$ null matrix, for \texttt{IdentityJac} a $1\times n$ matrix containing only ones, for \texttt{DiagJac} a $1\times n$ matrix which is the transposed of the diagonal vector, and lastly for \texttt{SparseJac} it returns a $1\times n$ matrix where each column is added together. To check that this new \texttt{sum} function actually is more efficient, we can use the \textit{@btime} macro function from the \emph{\cite{BenchmarkTools}} library. This gives us the number of allocations and memory used. By creating a \texttt{CJAD}-variable of length 400 and consisting of the four different Jacobian types(all $400\times 400$ with random values), we can compare how efficient the two methods sum up the \texttt{CJAD}-variable. The result is displayed in \autoref{tab:differentSumFunctions} and shows that even though the method of only implementing the \texttt{iterate} function is elegant to obtain the \texttt{sum} function, it can be much more efficient by implementing it specifically.
 
+\begin{table}[H]
+    \centering
+    \caption{Table with the number of allocations and memory usage spent by summing a random \texttt{CJAD}-variable of length 400 with two different summation methods.}
+    \label{tab:differentSumFunctions}
+    \def\arraystretch{1.5}
+    \begin{tabular}{ccc}
+    \textbf{Function} & \textbf{Number of Allocations} & \textbf{Kilobytes of Memory Used} \\
+        \hline
+         \texttt{sum} & 40 & 79 \\  
+         \texttt{Base.sum} & 28371 & 19 597\\ 
+         \hline
+    \end{tabular}
+\end{table}
 \section{Benchmarking Automatic Differentiation}
 As mentioned in \autoref{sec:Julia}, Julia already has an AD library called \textit{ForwardDiff} \emph{\citep{ForwardDiff}} that uses forward AD. Hence, it would be interesting to see how the different implementations compares when the functions evaluated are getting larger. As another reference, I have added the AD implementation in the MATLAB Reservoir Simulation Toolbox (MRST) \emph{\citep{mrstHomepage}} to the benchmark, to see how the Julia implementations compare to an optimized AD tool in MATLAB. To benchmark the efficiency of the different AD tools, I have evaluated the vector function $f: \Re^{n\times 3} \rightarrow \Re^n $ where
 \begin{equation}
