--- a/configurations/jlcode.sty
+++ b/configurations/jlcode.sty
@@ -64,7 +64,8 @@ true,false,ARGS,C_NULL,DevNull,ENDIAN_BOM,ENV,I,Inf,Inf16,Inf32,Inf64,%
 InsertionSort,JULIA_HOME,LOAD_PATH,MergeSort,NaN,NaN16,NaN32,NaN64,%
 PROGRAM_FILE,QuickSort,RoundDown,RoundFromZero,RoundNearest,%
 RoundNearestTiesAway,RoundNearestTiesUp,RoundToZero,RoundUp,STDERR,STDIN,%
-STDOUT,VERSION,catalan,e,eu,eulergamma,golden,im,nothing,pi,γ,π,φ%
+STDOUT,VERSION,catalan,e,eu,eulergamma,golden,im,nothing,pi,γ,π,φ
+    , sum, length, colSum%
 },%
 %
 % julia's built-ins:
